--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,17 @@
   p {
 	line-height: 2rem;
   }
+html {
+	background:url('header_img.jpg') repeat-x;
+	background-size:100%;
+}
 
   /* header */
+  img {
+	width: 100%;
+	max-width: 100%;
+	height: auto;
+  }
   #header-class {
 	width: 100%;
 	height: 100vh;
