--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -43,9 +43,24 @@
         <div class="profile-box">
           <div class='profile_photo'>
             <%= image_tag 'img.JPG',class:'photo',:size => '336x336'%>
+            <a href="https://megurin-cafe.com/"></a>
           </div>
             <div class="profile_text_box">
-             <p class="profile_text">1999年12月20日生まれで現在19歳。<br>山口県の田舎で生まれ、4歳から7歳までアメリカのスタンフォードで過ごす。<br>小学校から高校まで再び山口県で過ごし、青山学院大学への進学を機に上京。<br>大学1年時にライターとしてオウンドメディアに入社。<br>その後SEOを経て、現在はプロダクトマネージャーとして開発要件の定義やデータ分析、エンジニアの工数管理を行う。<br>友人が起業したサブカルメディアのライターの進捗管理や内製記事のKW生成などWebのディレクター業務も担当している。</p>
+             <p class="profile_text">
+               初めましての方も、いつもお世話になっている方もこんにちは。
+               <br>出口 史門（イデグチ フミト）です。
+               <br>デザインとか全くわからないんですが、RailsとHerokuでポートフォリオを作りました。
+               <br>Herokuだから表示速度がかなり遅い...。
+               <br>僕のプロフィールを簡潔に。
+               <br>1999年12月20日生まれで現在20歳。
+               <br>山口県の田舎で生まれ、4歳から7歳までアメリカのスタンフォードで過ごす。
+               <br>小学校から高校まで再び山口県で過ごし、青山学院大学への進学を機に上京。
+               <br>大学1年時にライターとしてオウンドメディアに入社。
+               <br>SEOを2年を学び、その後はプロダクトマネージャーとして開発要件の定義やデータ分析、エンジニアの工数管理を行った。
+               <br>フランス発のエンジニア養成機関42Tokyoで、エンジニアリングを学んだり、
+               <br>アドネとアフィの勉強がてら、「めぐりん」というカフェメディアを運営している。
+               <br><a href="https://megurin-cafe.com/"><i class="fas fa-external-link-alt"></i>「めぐりん」はこちら！</a>
+              </p>
             </div>
         </div>
       </div>
@@ -61,10 +76,10 @@
                 <p class="hobby_text">当時から生け花の教室に通っていた母の影響もあり、中学から高校までやっていました。流派は流星派というものです。この流派は生け花というか、植物を用いた芸術作品を作ることに近い。自ら作品を出展することも多々あり、自分の作品を不特定多数に見られるという経験が、意外と自分の価値観に大きな影響を与えています。</p>
               </div>
             </div>
-            <div class="hobby_odd movie">
+            <div class="hobby_odd sake">
               <div class= 'bkRGBA'>
-                <h3 class="hobby_title"><i class="fas fa-film"></i><span>MOVIE</span></h3>
-                <p class="hobby_text">平日でも夜に1本、休日は一気に4本ほど映画を見るのがルーティンになりつつあります。最近は一般的に糞映画と言われている映画をよく見ます。何故糞映画になってしまったのかを考察してその映画の制作背景を見ると意外と面白かったり、そういう意味では映画の制作背景をコミカルに描いた「カメラを止めるな！」はかなり好きでした。</p>
+                <h3 class="hobby_title"><i class="fas fa-wine-glass-alt"></i><span>ALCOHOL</span></h3>
+                <p class="hobby_text">お酒は好きです。でも弱いです。飲みに誘って頂ければ基本応じますが、戦えません。ビールは「キリン一番搾り」が1番好きです。ストカンはぬるいレモンが好きです。</p>
               </div>
             </div>
           </div>
@@ -72,13 +87,13 @@
             <div class="hobby_even sauna">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fas fa-hot-tub"></i><span>SAUNA</span></h3>
-                <p class="hobby_text">サブカルメディアの代表に連れて行かれて仕込まれてからすっかり虜になりました。よく銭湯でサウナと水風呂を5セット以上行う仙人を見かけるのですが、僕はまだ2セットで満足してしまいます。最近はお気に入りだった渋谷の改良湯という銭湯の人口密度がかなり増え、新たなコスパの良い銭湯を探し中。</p>
+                <p class="hobby_text">友人のエンジニアとデザイナーに仕込まれました。いろいろ行きましたが、最近できた池袋の「かるまる」マジでやばくないですか？水風呂のあの温度、本気で心臓止めにきてますよね。基本整うのは屋外です。アスティルを省いて。</p>
               </div>
             </div>
             <div class="hobby_even vocal">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fas fa-microphone-alt"></i><span>VOCAL</span></h3>
-                <p class="hobby_text">勉強も特にせず暇を持ち余した高校時代に、かっこいいものに憧れて歌を極めることにしました。ボイトレにも通いながらメキメキ成長していったある日、友人にHEY-SMITHを勧められてからバンドを組み、地元のライブハウスをよく4人で巡っていました。今でもカラオケでは大きな態度を取れるのでやっててよかったです。</p>
+                <p class="hobby_text">勉強も特にせず暇を持ち余した高校時代に、かっこいいものに憧れて歌を極めることにしました。ボイトレにも通いながらメキメキ成長していったある日、友人にHEY-SMITHを勧められてからバンドを組み、地元のライブハウスをよく4人で巡っていました。今でもカラオケではかなりマウントを取れるのでやっててよかったです。</p>
               </div>
             </div>
           </div>
@@ -91,28 +106,15 @@
      <div class='skills-box'>
         <div class='card'>
          <div class='skill-desc'>
-           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>基本的なツールなど</span></h3>
-           <p class="skill-desc-text">自分が業務で使用経験のあるツールやプログラミングスキルをまとめています。</p>
+           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>基本的なツール</span></h3>
+           <p class="skill-desc-text">自分が業務で使用経験のあるツールをまとめています。</p>
            <table class="skill-desc-table">
              <tr>
               <th>技術</th>
-              <th>経験年数</th>
               <th>スキル</th>
             </tr>
             <tr>
-              <td>GAS</td>
-              <td>半年</td>
-              <td>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </td>
-            </tr>
-            <tr>
               <td>slack</td>
-              <td>1年</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -123,7 +125,6 @@
             </tr>
             <tr>
               <td>Google Analytics</td>
-              <td>1年</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -134,7 +135,6 @@
             </tr>
             <tr>
               <td>Google Search Console</td>
-              <td>1年</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -144,23 +144,31 @@
               </td>
             </tr>
             <tr>
-              <td>Google Firebase</td>
-              <td>2ヶ月</td>
+              <td>BigQuery（SQL）</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
+                <i class="fas fa-star"></i>
                 <i class="far fa-star"></i>
               </td>
             </tr>
             <tr>
               <td>Google Ads</td>
-              <td>1年</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </td>
+            </tr>
+            <tr>
+              <td>Google Firebase</td>
+              <td>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
               </td>
@@ -170,17 +178,15 @@
         </div>
        <div class='card'>
          <div class='skill-desc'>
-           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>コーディング・デザイン</span></h3>
-           <p class="skill-desc-text">基本的なことは一通りできます。</p>
+           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>Web</span></h3>
+           <p class="skill-desc-text">使用経験のあるものをまとめました。</p>
            <table class="skill-desc-table">
              <tr>
               <th>技術</th>
-              <th>経験年数</th>
               <th>スキル</th>
             </tr>
             <tr>
               <td>HTML5</td>
-              <td>1年</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -191,31 +197,6 @@
             </tr>
             <tr>
               <td>CSS3</td>
-              <td>1年</td>
-              <td>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-              </td>
-            </tr>
-           </table>
-         </div>
-       </div>
-       <div class='card'>
-         <div class='skill-desc'>
-           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>フロントエンド</span></h3>
-           <p class="skill-desc-text">WebのフロントエンドはjQueryが主です。</p>
-           <table class="skill-desc-table">
-             <tr>
-              <th>技術</th>
-              <th>経験年数</th>
-              <th>スキル</th>
-            </tr>
-            <tr>
-              <td>JavaScript</td>
-              <td>半年</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -226,7 +207,6 @@
             </tr>
             <tr>
               <td>jQuery</td>
-              <td>2ヶ月</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -235,37 +215,22 @@
                 <i class="far fa-star"></i>
               </td>
             </tr>
-           </table>
-         </div>
-       </div>
-       <div class='card-last-row'>
-         <div class='skill-desc'>
-           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>バックエンド</span></h3>
-           <p class="skill-desc-text">バックエンドはRailsを主に使用しています。Goを勉強中。</p>
-           <table class="skill-desc-table">
-             <tr>
-              <th>技術</th>
-              <th>経験年数</th>
-              <th>スキル</th>
-            </tr>
             <tr>
               <td>Ruby on Rails</td>
-              <td>1年</td>
               <td>
-                <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
                 <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
               </td>
             </tr>
             <tr>
-              <td>Go</td>
-              <td>1ヶ月</td>
+              <td>SQLite</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
+                <i class="fas fa-star"></i>
                 <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
               </td>
@@ -273,34 +238,41 @@
            </table>
          </div>
        </div>
-       <div class='card-last-row'>
+       <div class='card'>
          <div class='skill-desc'>
-           <h3 class="skill-desc-title"><i class="fas fa-database"></i><span>データベース</span></h3>
-           <p class="skill-desc-text">直近ではオウンドメディアでのPdMで主にBigQueryに触れています。</p>
+           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>勉強中...。</span></h3>
+           <p class="skill-desc-text">主に42Tokyoで学習中。</p>
            <table class="skill-desc-table">
              <tr>
               <th>技術</th>
-              <th>経験年数</th>
               <th>スキル</th>
             </tr>
             <tr>
-              <td>BigQuery</td>
-              <td>2ヶ月</td>
+              <td>C</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
               </td>
             </tr>
             <tr>
-              <td>MySQL</td>
-              <td>2ヶ月</td>
+              <td>shell</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </td>
+            </tr>
+            <tr>
+              <td>git</td>
+              <td>
                 <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
                 <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
               </td>
@@ -327,5 +299,5 @@
    <!-- <div class="footer-icon-box"> -->
      <a href="#header-class" class="footer-icon-box"><i class="fas fa-angle-double-up"></i></a>
    <!-- </div> -->
-   <p class="footer-text">© 2019 Fumito Ideguchi</p>
+   <p class="footer-text">© 2020 Fumito Ideguchi</p>
  </footer>
