--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio</title>
     <meta charset="UTF-8">
+    <title>イデグチフミトのportfolio</title>
+    <meta name="description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
