--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -56,7 +56,7 @@
                <br>山口県の田舎で生まれ、4歳から7歳までアメリカのスタンフォードで過ごす。
                <br>小学校から高校まで再び山口県で過ごし、青山学院大学への進学を機に上京。
                <br>大学1年時にライターとしてオウンドメディアに入社。
-               <br>SEOを2年を学び、その後はプロダクトマネージャーとして開発要件の定義やデータ分析、エンジニアの工数管理を行った。
+               <br>SEOを2年学び、その後はプロダクトマネージャーとして開発要件の定義やデータ分析、エンジニアの工数管理を行った。
                <br>フランス発のエンジニア養成機関42Tokyoで、エンジニアリングを学んだり、
                <br>アドネとアフィの勉強がてら、「めぐりん」というカフェメディアを運営している。
                <br><a href="https://megurin-cafe.com/"><i class="fas fa-external-link-alt"></i>「めぐりん」はこちら！</a>
