--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>イデグチフミトのportfolio</title>
     <meta name="description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。">
+    <meta name="twitter:card" content="summary_large_image" /> <!--①-->
+    <meta name="twitter:site" content="@__ideguchi" /> <!--②-->
+    <meta property="og:url" content="https://fumitoideguchi.herokuapp.com/" /> <!--③-->
+    <meta property="og:title" content="記事のタイトル" /> <!--④-->
+    <meta property="og:description" content="記事の要約（ディスクリプション）" /> <!--⑤-->
+    <meta property="og:image" content="画像のURL" /> <!--⑥-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
