--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <meta name="twitter:card" content="summary_large_image" /> <!--①-->
     <meta name="twitter:site" content="@__ideguchi" /> <!--②-->
     <meta property="og:url" content="https://fumitoideguchi.herokuapp.com/" /> <!--③-->
-    <meta property="og:title" content="イデグチフミトのことが一通りわかるサイト" /> <!--④-->
+    <meta property="og:title" content="イデグチフミトのことが一通りわかるページ" /> <!--④-->
     <meta property="og:description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。" /> <!--⑤-->
-    <meta property="og:image" content="https://fumitoideguchi.herokuapp.com/assets/img-7f11b7c197e0d70f3e9388495ce087a2b50f1fdb6db8bdb0ecb0995f9c6ccd40.JPG" /> <!--⑥-->
+    <meta property="og:image" content="#{twitter_image_url}" /> <!--⑥-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
