--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
     <meta name="twitter:card" content="summary_large_image" /> <!--①-->
     <meta name="twitter:site" content="@__ideguchi" /> <!--②-->
     <meta property="og:url" content="https://fumitoideguchi.herokuapp.com/" /> <!--③-->
-    <meta property="og:title" content="イデグチフミトのことが一通りわかるページ" /> <!--④-->
-    <meta property="og:description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。" /> <!--⑤-->
+    <meta property="og:title" content="イデグチフミトのportfolio" /> <!--④-->
+    <meta property="og:description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。" /> <!--⑤-->
     <meta property="og:image" content="#{twitter_image_url}" /> <!--⑥-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
