--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://fumitoideguchi.herokuapp.com/" /> <!--③-->
     <meta property="og:title" content="イデグチフミトのportfolio" /> <!--④-->
     <meta property="og:description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。" /> <!--⑤-->
-    <meta property="og:image" content="#{twitter_image_url}" /> <!--⑥-->
+    <meta property="og:image" content="#{image_url('me_photo.JPG')}" /> <!--⑥-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
