--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,10 @@
     <meta name="description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。">
     <meta name="twitter:card" content="summary_large_image" /> <!--①-->
     <meta name="twitter:site" content="@__ideguchi" /> <!--②-->
-    <meta property="og:url" content="https://fumitoideguchi.herokuapp.com/" /> <!--③-->
+    <meta property="og:url" content="https://fumitoideguchi.herokuapp.com" /> <!--③-->
     <meta property="og:title" content="イデグチフミトのportfolio" /> <!--④-->
     <meta property="og:description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。" /> <!--⑤-->
-    <meta property="og:image" content="#{image_url('me_photo.JPG')}" /> <!--⑥-->
+    <meta property="og:image" content="<%= asset_url('me_photo.JPG')%>" /> <!--⑥-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
