--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -240,6 +240,12 @@
 	margin: auto;
 	vertical-align: middle;
   }
+  .linkto {
+	  padding :5px 10px;
+	  color :white;
+	  background-color : rgba(132,130,130,0.9);
+	  border-radius: 20px;
+  }
   /*profile*/
   /*about_me*/
   .about_me {
