--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -57,9 +57,10 @@
                <br>小学校から高校まで再び山口県で過ごし、青山学院大学への進学を機に上京。
                <br>大学1年時にライターとしてオウンドメディアに入社。
                <br>SEOを2年学び、その後はプロダクトマネージャーとして開発要件の定義やデータ分析、エンジニアの工数管理を行った。
-               <br>フランス発のエンジニア養成機関42Tokyoで、エンジニアリングを学んだり、
+               <br>現在はフランス発のエンジニア養成機関42Tokyoで、エンジニアリングを学んだり、
                <br>アドネとアフィの勉強がてら、「めぐりん」というカフェメディアを運営している。
-               <br><a href="https://megurin-cafe.com/"><i class="fas fa-external-link-alt"></i>「めぐりん」はこちら！</a>
+               <br><i class="far fa-hand-point-right"></i><a href="https://note.com/fumito_07/n/nf07c50689044"><span class="linkto">42Tokyoの入学試験、piscineの体験記はこちら</span></a>
+               <br><i class="far fa-hand-point-right"></i><a href="https://megurin-cafe.com"><span class="linkto">「めぐりん」はこちら</span></a>
               </p>
             </div>
         </div>
@@ -73,13 +74,13 @@
             <div class="hobby_odd flower">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fab fa-pagelines"></i><span>IKEBANA</span></h3>
-                <p class="hobby_text">当時から生け花の教室に通っていた母の影響もあり、中学から高校までやっていました。流派は流星派というものです。この流派は生け花というか、植物を用いた芸術作品を作ることに近い。自ら作品を出展することも多々あり、自分の作品を不特定多数に見られるという経験が、意外と自分の価値観に大きな影響を与えています。</p>
+                <p align="justify" class="hobby_text">当時から生け花の教室に通っていた母の影響もあり、中学から高校までやっていました。流派は流星派というものです。この流派は生け花というか、植物を用いた芸術作品を作ることに近い。自ら作品を出展することも多々あり、自分の作品を不特定多数に見られるという経験が、意外と自分の価値観に大きな影響を与えています。</p>
               </div>
             </div>
             <div class="hobby_odd sake">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fas fa-wine-glass-alt"></i><span>ALCOHOL</span></h3>
-                <p class="hobby_text">お酒は好きです。でも弱いです。飲みに誘って頂ければ基本応じますが、戦えません。ビールは「キリン一番搾り」が1番好きです。ストカンはぬるいレモンが好きです。</p>
+                <p align="justify" class="hobby_text">お酒は好きです。でも弱いです。飲みに誘って頂ければ基本応じますが、戦えません。ビールは「キリン一番搾り」が1番好きです。ストカンはぬるいレモンが好きです。</p>
               </div>
             </div>
           </div>
@@ -87,13 +88,13 @@
             <div class="hobby_even sauna">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fas fa-hot-tub"></i><span>SAUNA</span></h3>
-                <p class="hobby_text">友人のエンジニアとデザイナーに仕込まれました。いろいろ行きましたが、最近できた池袋の「かるまる」マジでやばくないですか？水風呂のあの温度、本気で心臓止めにきてますよね。基本整うのは屋外です。アスティルを省いて。</p>
+                <p align="justify" class="hobby_text">友人のエンジニアとデザイナーに仕込まれました。いろいろ行きましたが、最近できた池袋の「かるまる」マジでやばくないですか？水風呂のあの温度、本気で心臓止めにきてますよね。基本整うのは屋外です。アスティルを省いて。</p>
               </div>
             </div>
             <div class="hobby_even vocal">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fas fa-microphone-alt"></i><span>VOCAL</span></h3>
-                <p class="hobby_text">勉強も特にせず暇を持ち余した高校時代に、かっこいいものに憧れて歌を極めることにしました。ボイトレにも通いながらメキメキ成長していったある日、友人にHEY-SMITHを勧められてからバンドを組み、地元のライブハウスをよく4人で巡っていました。今でもカラオケではかなりマウントを取れるのでやっててよかったです。</p>
+                <p align="justify" class="hobby_text">勉強も特にせず暇を持ち余した高校時代に、かっこいいものに憧れて歌を極めることにしました。ボイトレにも通いながらメキメキ成長していったある日、友人にHEY-SMITHを勧められてからバンドを組み、地元のライブハウスをよく4人で巡っていました。今でもカラオケではかなりマウントを取れるのでやっててよかったです。</p>
               </div>
             </div>
           </div>
