--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -350,6 +350,8 @@
   .skill-desc-text{
 	margin-top: 0;
 	margin-bottom: 1rem;
+	width: 88%;
+	margin :0 auto;
   }
   .skill-desc-table{
 	width: 100%;
