--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -57,9 +57,9 @@
                <br>小学校から高校まで再び山口県で過ごし、青山学院大学への進学を機に上京。
                <br>大学1年時にライターとしてオウンドメディアに入社。
                <br>SEOを2年学び、その後はプロダクトマネージャーとして開発要件の定義やデータ分析、エンジニアの工数管理を行った。
-               <br>現在はフランス発のエンジニア養成機関42Tokyoで、エンジニアリングを学んだり、
+               <br>現在はフランス発のエンジニア養成機関「42Tokyo」に合格したので、そこでエンジニアリングを学んだり、
                <br>アドネとアフィの勉強がてら、「めぐりん」というカフェメディアを運営している。
-               <br><i class="far fa-hand-point-right"></i><a href="https://note.com/fumito_07/n/nf07c50689044"><span class="linkto">42Tokyoの入学試験、piscineの体験記はこちら</span></a>
+               <br><i class="far fa-hand-point-right"></i><a href="https://note.com/fumito_07/n/nf07c50689044"><span class="linkto">42Tokyo、piscineの体験記</span></a>
                <br><i class="far fa-hand-point-right"></i><a href="https://megurin-cafe.com"><span class="linkto">「めぐりん」はこちら</span></a>
               </p>
             </div>
@@ -94,7 +94,7 @@
             <div class="hobby_even vocal">
               <div class= 'bkRGBA'>
                 <h3 class="hobby_title"><i class="fas fa-microphone-alt"></i><span>VOCAL</span></h3>
-                <p align="justify" class="hobby_text">勉強も特にせず暇を持ち余した高校時代に、かっこいいものに憧れて歌を極めることにしました。ボイトレにも通いながらメキメキ成長していったある日、友人にHEY-SMITHを勧められてからバンドを組み、地元のライブハウスをよく4人で巡っていました。今でもカラオケではかなりマウントを取れるのでやっててよかったです。</p>
+                <p align="justify" class="hobby_text">勉強も特にせず暇を持ち余した高校時代に、かっこいいものに憧れて歌を極めることにしました。ボイトレにも通いながらメキメキ成長していき、その後友人にHEY-SMITHを勧められてからバンドを組み、地元のライブハウスをよく4人で巡っていました。今でもカラオケではかなりマウントを取れるのでやっててよかったです。</p>
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
         <div class='card'>
          <div class='skill-desc'>
            <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>基本的なツール</span></h3>
-           <p class="skill-desc-text">自分が業務で使用経験のあるツールをまとめています。</p>
+           <p class="skill-desc-text">業務で使用経験があるツール。</p>
            <table class="skill-desc-table">
              <tr>
               <th>技術</th>
@@ -180,7 +180,7 @@
        <div class='card'>
          <div class='skill-desc'>
            <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>Web</span></h3>
-           <p class="skill-desc-text">使用経験のあるものをまとめました。</p>
+           <p class="skill-desc-text">使用経験のあるもの。</p>
            <table class="skill-desc-table">
              <tr>
               <th>技術</th>
@@ -259,7 +259,7 @@
               </td>
             </tr>
             <tr>
-              <td>shell</td>
+              <td>shell script</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
