--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -103,7 +103,7 @@
    </section>
    <section class = 'skills'>
      <div class="container">
-     <h2 class="headline" id="skills"><i class="fas fa-check"></i><span>SKIILS</span></h2>
+     <h2 class="headline" id="skills"><i class="fas fa-check"></i><span>SKILLS</span></h2>
      <div class='skills-box'>
         <div class='card'>
          <div class='skill-desc'>
