--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -14,7 +14,7 @@
           <a href="#profile"><i class="fas fa-id-card-alt nav-icon"></i><span class="nav-list-title">PROFILE</span></a>
         </li>
         <li class="nav-list-item">
-          <a href="#about_me"><i class="fas fa-smile nav-icon"></i><span class="nav-list-title">ABOUT ME</span></a>
+          <a href="#about_me"><i class="fas fa-smile nav-icon"></i><span class="nav-list-title">HOBBY</span></a>
         </li>
         <li class="nav-list-item">
           <a href="#skills"><i class="fas fa-check nav-icon"></i><span class="nav-list-title">SKILLS</span></a>
@@ -26,17 +26,14 @@
     </div>
   </div>
 </nav>
-<header id="header-class">
+<header id="header-class" class="header-img">
   <div class="header-content">
      <h1 class="headline">
        <a href="#" class="title_name">Fumito Ideguchi's Portfolio</a>
      </h1>
-     <div class="head-content">
-       <a href="#profile"><i class="fas fa-arrow-circle-down"></i><span>Start</span></a>
-     </div>
    </div>
  </header>
- <main>
+ <main class="main-img">
    <section class="profile">
      <div class="container">
       <h2 class="headline" id="profile"><i class="fas fa-id-card-alt"></i><span>PROFILE</span></h2>
@@ -68,7 +65,7 @@
    </section>
    <section class="about_me">
      <div class="container">
-      <h2 class="headline" id="about_me"><i class="fas fa-smile"></i><span>ABOUT ME</span></h2>
+      <h2 class="headline" id="about_me"><i class="fas fa-smile"></i><span>HOBBY</span></h2>
         <div class="about_me-box">
           <div class="about_me-odd_box">
             <div class="hobby_odd flower">
