--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -39,7 +39,7 @@
       <h2 class="headline" id="profile"><i class="fas fa-id-card-alt"></i><span>PROFILE</span></h2>
         <div class="profile-box">
           <div class='profile_photo'>
-            <%= image_tag 'img.jpg',class:'photo',:size => '336x504'%>
+            <%= image_tag 'img_profile.jpg',class:'photo',:size => '336x504'%>
             <a href="https://megurin-cafe.com/"></a>
           </div>
             <div class="profile_text_box">
