--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -1,4 +1,4 @@
-<nav>
+ <nav>
   <div id="nav-content">
     <div class="nav-social-list">
       <div class="nav-social-item">
@@ -39,7 +39,7 @@
       <h2 class="headline" id="profile"><i class="fas fa-id-card-alt"></i><span>PROFILE</span></h2>
         <div class="profile-box">
           <div class='profile_photo'>
-            <%= image_tag 'img_profile.jpg',class:'photo',:size => '336x504'%>
+            <%= image_tag 'img_profile.jpg',class:'photo',:size => '336x336'%>
             <a href="https://megurin-cafe.com/"></a>
           </div>
             <div class="profile_text_box">
@@ -176,7 +176,7 @@
         </div>
        <div class='card'>
          <div class='skill-desc'>
-           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>Web</span></h3>
+           <h3 class="skill-desc-title"><i class="fas fa-desktop"></i><span>プログラミングスキル</span></h3>
            <p class="skill-desc-text">使用経験のあるもの。</p>
            <table class="skill-desc-table">
              <tr>
@@ -184,7 +184,7 @@
               <th>スキル</th>
             </tr>
             <tr>
-              <td>HTML5</td>
+              <td>HTML / CSS</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -194,17 +194,7 @@
               </td>
             </tr>
             <tr>
-              <td>CSS3</td>
-              <td>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>jQuery</td>
+              <td>JavaScript</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -214,7 +204,7 @@
               </td>
             </tr>
             <tr>
-              <td>Ruby on Rails</td>
+              <td>Ruby / Rails</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -256,7 +246,17 @@
               </td>
             </tr>
             <tr>
-              <td>shell script</td>
+              <td>Python / Djungo</td>
+              <td>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </td>
+            </tr>
+            <tr>
+              <td>Shell script(zsh)</td>
               <td>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
