--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>イデグチフミトのportfolio</title>
-    <meta name="description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。">
+    <title>出口史門のポートフォリオ</title>
+    <meta name="description" content="経歴やら趣味やらできることやらを簡潔にまとめてみました。更新頻度多めです。">
     <meta name="twitter:card" content="summary_large_image" /> <!--①-->
     <meta name="twitter:site" content="@__ideguchi" /> <!--②-->
     <meta property="og:url" content="https://fumitoideguchi.herokuapp.com" /> <!--③-->
-    <meta property="og:title" content="イデグチフミトのportfolio" /> <!--④-->
-    <meta property="og:description" content="出口史門のポートフォリオです。経歴やら趣味やらできることやらを簡潔にまとめてみました。" /> <!--⑤-->
+    <meta property="og:title" content="出口史門のポートフォリオ" /> <!--④-->
+    <meta property="og:description" content="経歴やら趣味やらできることやらを簡潔にまとめてみました。更新頻度多めです。" /> <!--⑤-->
     <meta property="og:image" content="<%= asset_url('me_photo.JPG')%>" /> <!--⑥-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
